--- a/DS_Algo_in_Java/.project
+++ b/DS_Algo_in_Java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DS Algo in Java</name>
+	<name>DS Algo-in-Java</name>
 	<comment></comment>
 	<projects>
 	</projects>
